# twtter-realtime-etl

./: .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  manage.py  pyproject.toml
config/: settings.py
