[tool.poetry]
name = "twtter-realtime-etl"
version = "0.1.0"
description = ""
authors = ["Philip Otieno <iamphilipotieno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
Django = "^4.1.7"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
